added pokemon POST

--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
   "name": "express-workshop",
   "version": "1.0.0",
-  "description": "An API REST using express.js",
+  "description": "this is a project for the node.js workshop",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Sand2003/express_workshop.git"
+  },
   "keywords": [
-    "api",
-    "rest",
+    "node",
+    "jwt",
     "express",
-    "node.js"
+    "mysql"
   ],
   "author": "Sandra Paola",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Sand2003/express_workshop/issues"
+  },
+  "homepage": "https://github.com/Sand2003/express_workshop#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.12"
   }
 }
